// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`myTest.each7-context-array-2-spread-true hello 2 1`] = `
{
  "argNumber": 2,
  "argString": "hello",
}
`;

exports[`myTest.each7-context-array-2-spread-true hi 3 1`] = `
{
  "argNumber": 3,
  "argString": "hi",
}
`;

exports[`myTest.each7-context-array-2-true hello 2 1`] = `
{
  "argNumber": 2,
  "argString": "hello",
  "myFixture": 1234,
}
`;

exports[`myTest.each7-context-array-2-true hi 3 1`] = `
{
  "argNumber": 3,
  "argString": "hi",
  "myFixture": 1234,
}
`;

exports[`myTest.each7-context-array-3-true hello 2 1`] = `
{
  "argNumber": 2,
  "argString": "hello",
  "myFixture": 1234,
}
`;

exports[`myTest.each7-context-array-3-true hi 3 1`] = `
{
  "argNumber": 3,
  "argString": "hi",
  "myFixture": 1234,
}
`;

exports[`myTest.each7-context-array-true hello 1`] = `
{
  "arg": "hello",
  "myFixture": 1234,
}
`;

exports[`myTest.each7-context-array-true hi 1`] = `
{
  "arg": "hi",
  "myFixture": 1234,
}
`;

exports[`myTest.each7-context-single-true hello 1`] = `
{
  "arg": "hello",
  "myFixture": 1234,
}
`;

exports[`myTest.each7-context-single-true hi 1`] = `
{
  "arg": "hi",
  "myFixture": 1234,
}
`;

exports[`myTest.each7-context-template-true 'hello' 2 1`] = `
{
  "arg": {
    "a": "hello",
    "b": 2,
  },
  "myFixture": 1234,
}
`;

exports[`myTest.each7-context-template-true 'hi' 3 1`] = `
{
  "arg": {
    "a": "hi",
    "b": 3,
  },
  "myFixture": 1234,
}
`;
